--- a/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
@@ -12,11 +12,23 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T17:52:29.416975Z",
-     "start_time": "2022-07-15T17:52:29.057958Z"
+     "end_time": "2022-07-18T02:52:19.776705Z",
+     "start_time": "2022-07-18T02:52:19.036240Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'bed_reader'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 14>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# import matplotlib.markers as markers\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# import matplotlib.pyplot as plt\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# import timeit\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# import cProfile\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# import itertools\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnumba\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m jit, njit\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbed_reader\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m open_bed\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'bed_reader'"
+     ]
+    }
+   ],
    "source": [
     "# import os, sys\n",
     "# import collections\n",
