--- a/LM_SCAD_MCP_np_MODULE-SNP.ipynb
+++ b/LM_SCAD_MCP_np_MODULE-SNP.ipynb
@@ -193,54 +193,49 @@
    "outputs": [],
    "source": [
     "# @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def _SNP_update_smooth_grad_convex_LM(N, p, bed, beta_md, y, _dtype, _order):\n",
+    "def _SNP_update_smooth_grad_convex_LM(N, SNP_ind, bed, beta_md, y, outcome_iid):\n",
     "    '''\n",
     "    Update the gradient of the smooth convex objective component.\n",
     "    '''\n",
-    "    _itemsize = np.dtype(_dtype).itemsize\n",
+    "    p=len(list(bed.sid))\n",
+    "    gene_iid = np.array(list(bed.iid))\n",
+    "    _y = y[np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
+    "    gene_ind = np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]\n",
     "    # first calcualte _=X@beta_md-y\n",
     "    _ = np.zeros(N)\n",
-    "    if _order == \"F\":\n",
-    "        for j in np.arange(p):\n",
-    "            _X = np.memmap(bed, dtype=_dtype, mode='r', offset=j*_itemsize*N, shape = (N,))\n",
-    "            _ += _X*beta_md[j]\n",
-    "    elif _order == \"C\":\n",
-    "        for j in np.arange(N):\n",
-    "            _X = np.memmap(bed, dtype=_dtype, mode='r', offset=j*_itemsize*p, shape = (p,))\n",
-    "            _[j] = _X@beta_md\n",
-    "    _ -= y\n",
+    "    for j in SNP_ind:\n",
+    "        _X = bed.read(np.s_[:,j], dtype=np.int8).flatten()\n",
+    "        _X = _X[gene_ind] # get gene iid also in outcome iid\n",
+    "        _ += _X*beta_md[j]\n",
+    "    _ -= _y\n",
     "    # then calculate _XTXbeta = X.T@X@beta_md = X.T@_\n",
     "    _XTXbeta = np.zeros(p)\n",
-    "    if _order == \"F\":\n",
-    "        for j in np.arange(p):\n",
-    "            _X = np.memmap(bed, dtype=_dtype, mode='r', offset=j*_itemsize*N, shape = (N,))\n",
-    "            _XTXbeta[j] = _X@_\n",
-    "    elif _order == \"C\":\n",
-    "        for j in np.arange(N):\n",
-    "            _X = np.memmap(bed, dtype=_dtype, mode='r', offset=j*_itemsize*p, shape = (p,))\n",
-    "            _XTXbeta += _X*_[j]\n",
+    "    for j in SNP_ind:\n",
+    "        _X = bed.read(np.s_[:,j], dtype=np.int8).flatten()\n",
+    "        _X = _X[gene_ind] # get gene iid also in outcome iid\n",
+    "        _XTXbeta[j] = _X@_\n",
     "    del _\n",
     "    return 1/N*_XTXbeta\n",
     "\n",
     "# @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def _SNP_update_smooth_grad_SCAD_LM(N, p, bed, beta_md, y, _lambda, a, _dtype, _order):\n",
+    "def _SNP_update_smooth_grad_SCAD_LM(N, SNP_ind, bed, beta_md, y, outcome_iid, _lambda, a):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for SCAD penalty.\n",
     "    '''\n",
-    "    return _SNP_update_smooth_grad_convex_LM(N=N, p=p, X=bed, beta_md=beta_md, y=y, _dtype=_dtype, _order=_order) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
+    "    return _SNP_update_smooth_grad_convex_LM(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=beta_md, y=y, outcome_iid) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
     "\n",
     "# @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def _SNP_update_smooth_grad_MCP_LM(N, p, bed, beta_md, y, _lambda, gamma, _dtype, _order):\n",
+    "def _SNP_update_smooth_grad_MCP_LM(N, SNP_ind, bed, beta_md, y, outcome_iid, _lambda, gamma):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for MCP penalty.\n",
     "    '''\n",
-    "    return _SNP_update_smooth_grad_convex_LM(N=N, p=p, X=bed, beta_md=beta_md, y=y, _dtype=_dtype, _order=_order) + MCP_concave_grad(x=beta_md, lambda_=_lambda, gamma=gamma)\n",
+    "    return _SNP_update_smooth_grad_convex_LM(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=beta_md, y=y, outcome_iid) + MCP_concave_grad(x=beta_md, lambda_=_lambda, gamma=gamma)\n",
     "\n",
     "\n",
     "# @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def _SNP_lambda_max_LM(bed, y, N, p, _dtype, _order):\n",
+    "def _SNP_lambda_max_LM(bed, y, outcome_iid, N, SNP_ind):\n",
     "    \"\"\"\n",
-    "    Calculate the lambda_mabed, i.e., the minimum lambda to nullify all penalized betas.\n",
+    "    Calculate the lambda_max, i.e., the minimum lambda to nullify all penalized betas.\n",
     "    \"\"\"\n",
     "#     X_temp = X.copy()\n",
     "#     X_temp = X_temp[:,1:]\n",
@@ -249,16 +244,15 @@
     "#     y_temp = y.copy()\n",
     "#     y_temp -= np.mean(y)\n",
     "#     y_temp /= np.std(y)\n",
-    "    _itemsize = np.dtype(_dtype).itemsize\n",
+    "    p = len(list(bed.sid))\n",
+    "    gene_iid = np.array(list(bed.iid))\n",
+    "    _y = y[np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
+    "    gene_ind = np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]\n",
     "    _ = np.zeros(p)\n",
-    "    if _order == \"F\":\n",
-    "        for j in np.arange(p):\n",
-    "            _X = np.memmap(bed, dtype=_dtype, mode='r', offset=j*_itemsize*N, shape = (N,))\n",
-    "            _[j] = _X@y\n",
-    "    elif _order == \"C\":\n",
-    "        for j in np.arange(N):\n",
-    "            _X = np.memmap(bed, dtype=_dtype, mode='r', offset=j*_itemsize*p, shape = (p,))\n",
-    "            _ += _X*y[j]\n",
+    "    for j in SNP_ind:\n",
+    "        _X = bed.read(np.s_[:,j], dtype=np.int8).flatten()\n",
+    "        _X = _X[gene_ind] # get gene iid also in outcome iid\n",
+    "        _[j] = _X@_y\n",
     "\n",
     "    grad_at_0 = _[1:]/N\n",
     "    lambda_max = np.linalg.norm(grad_at_0, ord=np.infty)\n",
@@ -267,23 +261,18 @@
     "\n",
     "\n",
     "# @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def SNP_UAG_LM_SCAD_MCP(design_matribed, outcome, N, p, L_convebed, _dtype, _order, beta_0 = np.ones(1), tol=1e-2, maxit=500, _lambda=.5, penalty=\"SCAD\", a=3.7, gamma=2.):\n",
+    "def SNP_UAG_LM_SCAD_MCP(bed_file, bim_file, fam_file, outcome, outcome_iid, N, SNP_ind, L_convex, beta_0 = np.ones(1), tol=1e-2, maxit=500, _lambda=.5, penalty=\"SCAD\", a=3.7, gamma=2.):\n",
     "    '''\n",
     "    Carry out the optimization for penalized LM for a fixed lambda.\n",
     "    '''\n",
-    "    X = design_matrix\n",
+    "    bed = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "    y = outcome\n",
-    "    _itemsize = np.dtype(_dtype).itemsize\n",
+    "    p = len(list(bed.sid))\n",
     "    if np.all(beta_0==np.ones(1)):\n",
     "        _ = np.zeros(p)\n",
-    "        if _order == \"F\":\n",
-    "            for j in np.arange(p):\n",
-    "                _X = np.memmap(bed, dtype=_dtype, mode='r', offset=j*_itemsize*N, shape = (N,))\n",
-    "                _[j] = _X@y\n",
-    "        elif _order == \"C\":\n",
-    "            for j in np.arange(N):\n",
-    "                _X = np.memmap(bed, dtype=_dtype, mode='r', offset=j*_itemsize*p, shape = (p,))\n",
-    "                _ += _X*y[j]\n",
+    "        for j in SNP_ind:\n",
+    "            _X = bed.read(np.s_[:,j], dtype=np.int8).flatten()\n",
+    "            _X = _X[gene_ind] # get gene iid also in outcome iid\n",
     "        beta = np.sign(_)\n",
     "    else:\n",
     "        beta = beta_0\n",
@@ -299,8 +288,8 @@
     "    restart_k = 0\n",
     "    \n",
     "    if penalty == \"SCAD\":\n",
-    "#         L = np.max(np.array([L_convebed, 1./(a-1)]))\n",
-    "        L = np.linalg.norm(np.array([L_convebed, 1./(a-1)]), ord=np.infty)\n",
+    "#         L = np.max(np.array([L_convex, 1./(a-1)]))\n",
+    "        L = np.linalg.norm(np.array([L_convex, 1./(a-1)]), ord=np.infty)\n",
     "        opt_beta = .99/L\n",
     "        while ((not converged) or (k<3)) and k <= maxit:\n",
     "            k += 1\n",
@@ -315,14 +304,14 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = np.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (np.linalg.norm(beta_md - beta_md_old, ord=np.infty) < tol)\n",
-    "            smooth_grad = _SNP_update_smooth_grad_SCAD_LM(N=N, p=p, X=bed, beta_md=beta_md, y=y, _lambda=_lambda, a=a, _dtype=_dtype, _order=_order)\n",
+    "            smooth_grad = _SNP_update_smooth_grad_SCAD_LM(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=beta_md, y=y, outcome_iid=outcome_iid, _lambda=_lambda, a=a)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = np.all(np.max(np.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
     "#             converged = (np.linalg.norm(beta_md - beta_ag, ord=np.infty) < (tol*opt_beta))\n",
     "    else:\n",
-    "#         L = np.max(np.array([L_convebed, 1./(gamma)]))\n",
-    "        L = np.linalg.norm(np.array([L_convebed, 1./(gamma)]), ord=np.infty)\n",
+    "#         L = np.max(np.array([L_convex, 1./(gamma)]))\n",
+    "        L = np.linalg.norm(np.array([L_convex, 1./(gamma)]), ord=np.infty)\n",
     "        opt_beta = .99/L\n",
     "        while ((not converged) or (k<3)) and k <= maxit:\n",
     "            k += 1\n",
@@ -337,7 +326,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = np.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (np.linalg.norm(beta_md - beta_md_old, ord=np.infty) < tol)\n",
-    "            smooth_grad = _SNP_update_smooth_grad_MCP_LM(N=N, p=p, X=bed, beta_md=beta_md, y=y, _lambda=_lambda, gamma=gamma, _dtype=_dtype, _order=_order)\n",
+    "            smooth_grad = _SNP_update_smooth_grad_MCP_LM(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=beta_md, y=y, outcome_iid=outcome_iid, _lambda=_lambda, gamma=gamma)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = np.all(np.max(np.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -346,13 +335,15 @@
     "\n",
     "\n",
     "# @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def SNP_solution_path_LM(design_matribed, outcome, lambda_, L_convebed, N, p, beta_0 = np.ones(1), tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2., _dtype='float32', _order=\"F\"):\n",
+    "def SNP_solution_path_LM(bed_file, bim_file, fam_file, outcome, lambda_, L_convex, N, SNP_ind, beta_0 = np.ones(1), tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.):\n",
     "    '''\n",
     "    Carry out the optimization for the solution path without the strong rule.\n",
     "    '''\n",
+    "    bed = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
+    "    p = len(list(bed.sid))\n",
     "    beta_mat = np.zeros((len(lambda_)+1, p))\n",
     "    for j in range(len(lambda_)): \n",
-    "        beta_mat[j+1,:] = SNP_UAG_LM_SCAD_MCP(design_matrix=design_matribed, outcome=outcome, N=N, p=p, L_convex=L_convebed, beta_0 = beta_mat[j,:], tol=tol, maxit=maxit, _lambda=lambda_[j], penalty=penalty, a=a, gamma=gamma, _dtype=_dtype, _order=_order,)[1]\n",
+    "        beta_mat[j+1,:] = SNP_UAG_LM_SCAD_MCP(bed_file=bed_file, bim_file=bim_file, fam_file=fam_file, outcome=outcome, N=N, SNP_ind=SNP_ind, L_convex=L_convex, beta_0 = beta_mat[j,:], tol=tol, maxit=maxit, _lambda=lambda_[j], penalty=penalty, outcome_iid=outcome_iid, a=a, gamma=gamma)[1]\n",
     "    return beta_mat[1:,:]\n",
     "\n"
    ]
