--- a/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
@@ -9,26 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-18T02:52:19.776705Z",
-     "start_time": "2022-07-18T02:52:19.036240Z"
+     "end_time": "2022-07-18T17:45:19.033779Z",
+     "start_time": "2022-07-18T17:45:17.825566Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'bed_reader'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 14>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# import matplotlib.markers as markers\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# import matplotlib.pyplot as plt\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# import timeit\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# import cProfile\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# import itertools\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnumba\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m jit, njit\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbed_reader\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m open_bed\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'bed_reader'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import os, sys\n",
     "# import collections\n",
@@ -60,11 +48,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T17:52:29.745178Z",
-     "start_time": "2022-07-15T17:52:29.418959Z"
+     "end_time": "2022-07-18T17:45:19.474715Z",
+     "start_time": "2022-07-18T17:45:19.036269Z"
     }
    },
    "outputs": [],
@@ -184,8 +172,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-18T17:45:19.721864Z",
+     "start_time": "2022-07-18T17:45:19.691140Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
@@ -197,13 +190,13 @@
     "    gene_iid = np.array(list(bed.iid))\n",
     "    _y = y[np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
     "    gene_ind = np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]\n",
-    "    # first calcualte _=X@beta_md-y\n",
+    "    # first calcualte _=X@beta_md-_y\n",
     "    _ = np.zeros(N)\n",
     "    for j in SNP_ind:\n",
     "        _X = bed.read(np.s_[:,j], dtype=np.int8).flatten()\n",
     "        _X = _X[gene_ind] # get gene iid also in outcome iid\n",
     "        _ += _X*beta_md[j]\n",
-    "    _ = np.tanh(_/2.)/2.-y+.5\n",
+    "    _ = np.tanh(_/2.)/2.-_y+.5\n",
     "    # then calculate output\n",
     "    _XTXbeta = np.zeros(p)\n",
     "    for j in SNP_ind:\n",
@@ -218,14 +211,14 @@
     "    '''\n",
     "    Update the gradient of the smooth objective component for SCAD penalty.\n",
     "    '''\n",
-    "    return _SNP_update_smooth_grad_convex_logistic(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=beta_md, y=y, outcome_iid) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
+    "    return _SNP_update_smooth_grad_convex_logistic(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=beta_md, y=y, outcome_iid=outcome_iid) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
     "\n",
     "# @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def _SNP_update_smooth_grad_MCP_logistic(N, SNP_ind, bed, beta_md, y, outcome_iid, _lambda, gamma):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for MCP penalty.\n",
     "    '''\n",
-    "    return _SNP_update_smooth_grad_convex_logistic(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=beta_md, y=y, outcome_iid) + MCP_concave_grad(x=beta_md, lambda_=_lambda, gamma=gamma)\n",
+    "    return _SNP_update_smooth_grad_convex_logistic(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=beta_md, y=y, outcome_iid=outcome_iid) + MCP_concave_grad(x=beta_md, lambda_=_lambda, gamma=gamma)\n",
     "\n",
     "\n",
     "# @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
@@ -257,13 +250,15 @@
     "\n",
     "\n",
     "# @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def SNP_UAG_logistic_SCAD_MCP(bed_file, bim_file, fam_file, outcome, outcome_iid, N, SNP_ind, L_convex, beta_0 = np.ones(1), tol=1e-2, maxit=500, _lambda=.5, penalty=\"SCAD\", a=3.7, gamma=2.):\n",
+    "def SNP_UAG_logistic_SCAD_MCP(bed_file, bim_file, fam_file, outcome, outcome_iid, SNP_ind, L_convex, beta_0 = np.ones(1), tol=1e-2, maxit=500, _lambda=.5, penalty=\"SCAD\", a=3.7, gamma=2.):\n",
     "    '''\n",
     "    Carry out the optimization for penalized logistic for a fixed lambda.\n",
     "    '''\n",
     "    bed = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "    y = outcome\n",
     "    p = len(list(bed.sid))\n",
+    "    gene_iid = np.array(list(bed.iid))\n",
+    "    N = len(np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1])\n",
     "    if np.all(beta_0==np.ones(1)):\n",
     "        _ = np.zeros(p)\n",
     "        for j in SNP_ind:\n",
@@ -331,7 +326,7 @@
     "\n",
     "\n",
     "# @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def SNP_solution_path_logistic(bed_file, bim_file, fam_file, outcome, lambda_, L_convex, N, SNP_ind, beta_0 = np.ones(1), tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.):\n",
+    "def SNP_solution_path_logistic(bed_file, bim_file, fam_file, outcome, outcome_iid, lambda_, L_convex, SNP_ind, beta_0 = np.ones(1), tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.):\n",
     "    '''\n",
     "    Carry out the optimization for the solution path without the strong rule.\n",
     "    '''\n",
@@ -339,7 +334,7 @@
     "    p = len(list(bed.sid))\n",
     "    beta_mat = np.zeros((len(lambda_)+1, p))\n",
     "    for j in range(len(lambda_)): \n",
-    "        beta_mat[j+1,:] = SNP_UAG_logistic_SCAD_MCP(bed_file=bed_file, bim_file=bim_file, fam_file=fam_file, outcome=outcome, N=N, SNP_ind=SNP_ind, L_convex=L_convex, beta_0 = beta_mat[j,:], tol=tol, maxit=maxit, _lambda=lambda_[j], penalty=penalty, outcome_iid=outcome_iid, a=a, gamma=gamma)[1]\n",
+    "        beta_mat[j+1,:] = SNP_UAG_logistic_SCAD_MCP(bed_file=bed_file, bim_file=bim_file, fam_file=fam_file, outcome=outcome, SNP_ind=SNP_ind, L_convex=L_convex, beta_0 = beta_mat[j,:], tol=tol, maxit=maxit, _lambda=lambda_[j], penalty=penalty, outcome_iid=outcome_iid, a=a, gamma=gamma)[1]\n",
     "    return beta_mat[1:,:]\n",
     "\n"
    ]
@@ -353,111 +348,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-07-15T17:53:01.767761Z",
-     "start_time": "2022-07-15T17:52:29.841108Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\alphaIto\\AppData\\Local\\Temp\\ipykernel_14872\\1332484228.py:184: NumbaWarning: \u001b[1mCannot cache compiled function \"solution_path_logistic\" as it uses dynamic globals (such as ctypes pointers and large global arrays)\u001b[0m\n",
-      "  @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import matplotlib.markers as markers\n",
-    "import matplotlib.pyplot as plt\n",
-    "import timeit\n",
-    "from scipy.linalg import toeplitz, block_diag\n",
+    "import pandas as pd\n",
     "\n",
+    "bed_file = r\"/home/kyang/UKBB/genetics/cal/ukb_cal_chr22_v2.bed\"\n",
+    "bim_file = r\"/home/kyang/UKBB/genetics/cal/ukb_snp_chr22_v2.bim\"\n",
+    "fam_file = r\"/home/kyang/UKBB/genetics/cal/ukb45551_cal_chr22_v2_s488264.fam\"\n",
+    "outcome_file = r\"/home/kyang/UKBB/tabular/archive/40663/ukb40663.csv\"\n",
+    "fields = [\"eid\", \"2443-0.0\"]\n",
     "\n",
-    "# this cell is for profiling the function \n",
-    "np.random.seed(0)\n",
-    "N = 1000\n",
-    "SNR = 5.\n",
-    "true_beta = np.array([.5,-.5,.8,-.8]+[0]*2000)\n",
-    "X_cov = toeplitz(.5**np.arange(2004))\n",
-    "mean = np.zeros(true_beta.shape[0])\n",
-    "X = np.random.multivariate_normal(mean, X_cov, N)\n",
-    "X -= np.mean(X,0).reshape(1,-1)\n",
-    "X /= np.std(X,0)\n",
-    "intercept_design_column = np.ones(N).reshape(N, 1)\n",
-    "X_sim = np.concatenate((intercept_design_column, X), 1)\n",
-    "true_sigma_sim = np.sqrt(true_beta.T@X_cov@true_beta/SNR)\n",
-    "true_beta_intercept = np.concatenate((np.array([0.5]), true_beta))\n",
-    "signal = X_sim@true_beta_intercept + np.random.normal(0, true_sigma_sim, N)\n",
-    "y_sim = np.random.binomial(1, np.tanh(signal/2)/2+.5)\n",
+    "diabetes = pd.read_csv(outcome_file, skipinitialspace=True, usecols=fields, encoding= 'unicode_escape').dropna()\n",
+    "outcome_iid = list(diabetes.loc[:,\"eid\"])\n",
+    "outcome_iid = np.array(list(map(str, outcome_iid)))\n",
+    "outcome = np.array(list(diabetes.loc[:,\"2443-0.0\"]))\n",
+    "print(outcome[:20])\n",
+    "outcome = (outcome == 1).astype(int)\n",
     "\n",
-    "fit1 = UAG_logistic_SCAD_MCP(design_matrix=X_sim, outcome=y_sim, tol=1e-2, maxit=500, _lambda=.2, penalty=\"SCAD\", a=3.7, gamma=2.)\n",
+    "bed1 = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "\n",
-    "fit2 = solution_path_logistic(design_matrix=X_sim, outcome=y_sim, tol=1e-2, maxit=500, lambda_=np.linspace(.005,.08,60)[::-1], penalty=\"SCAD\", a=3.7, gamma=2.)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-07-15T17:54:06.730237Z",
-     "start_time": "2022-07-15T17:53:01.769764Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "118 ms ± 4.52 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "6.91 s ± 104 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%timeit UAG_logistic_SCAD_MCP(design_matrix=X_sim, outcome=y_sim, tol=1e-2, maxit=500, _lambda=.2, penalty=\"SCAD\", a=3.7, gamma=2.)\n",
-    "%timeit solution_path_logistic(design_matrix=X_sim, outcome=y_sim, tol=1e-2, maxit=500, lambda_=np.linspace(.01,.1,60)[::-1], penalty=\"SCAD\", a=3.7, gamma=2.)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-07-15T17:54:06.745238Z",
-     "start_time": "2022-07-15T17:54:06.732240Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[4.18288649e-01, 0.00000000e+00, 0.00000000e+00, ...,\n",
-       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
-       "       [4.19652110e-01, 0.00000000e+00, 0.00000000e+00, ...,\n",
-       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
-       "       [4.20959440e-01, 0.00000000e+00, 0.00000000e+00, ...,\n",
-       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
-       "       ...,\n",
-       "       [4.50533893e-01, 0.00000000e+00, 4.79884573e-02, ...,\n",
-       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
-       "       [4.51245655e-01, 0.00000000e+00, 5.41205703e-02, ...,\n",
-       "        3.57689149e-04, 0.00000000e+00, 0.00000000e+00],\n",
-       "       [4.52171425e-01, 0.00000000e+00, 5.98629351e-02, ...,\n",
-       "        1.09629533e-03, 0.00000000e+00, 0.00000000e+00]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fit2"
+    "N = len(bed1.iid)\n",
+    "p = len(bed1.sid)\n",
+    "SNP_ind = np.arange(300)\n",
+    "\n",
+    "print(SNP_solution_path_logistic(bed_file=bed_file, \n",
+    "                    bim_file=bim_file, \n",
+    "                    fam_file=fam_file, \n",
+    "                    outcome=outcome, \n",
+    "                    outcome_iid=outcome_iid, \n",
+    "                    lambda_=np.linspace(.005,.05,60)[::-1],\n",
+    "                    SNP_ind=SNP_ind, \n",
+    "                    L_convex=1e-2, \n",
+    "                    beta_0 = np.ones(1),\n",
+    "                    tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.))\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -484,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
